# cpp_projects

./: README.md
CLogReader/: .gitignore  CMakeLists.txt
CLogReader/benchmark/: CMakeLists.txt  benchmark.cpp
CLogReader/project/: CMakeLists.txt  clogreader.cpp  clogreader.h  main.cpp  search.h
CLogReader/scripts/: perf_stat.sh  run_programm.sh
CLogReader/scripts/mainbenchmark/: mainbenchmark.json
CLogReader/unittests/: CMakeLists.txt  testclogreader.cpp  testclogreader.h  testsetfilter.cpp  testsetfilter.h
SpaceInvaders/: README.md
SpaceInvaders/SpaceInvaders/: Bullet.qml  CMakeLists.txt  Enemy.qml  GameOver.qml  Main.qml  assets.qrc  bullet.cpp  bullet.h  controller.cpp  controller.h  controller_test.cpp  enemy.cpp  enemy.h  main.cpp
